Jgrapht adopt